# psinspect

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: testing.yml  wheels.yml
psinspect/: __init__.py  _version.py  app.ipynb  app.py
psinspect/tests/: test_app.py
